--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: sliver_overfill_remaining
 description: "A sliver that always fills the remaining space in the viewport, plus some extra height."
-version: 0.1.0
+version: 0.1.1
 repository: https://github.com/martinsellergren/sliver_overfill_remaining
 
 environment:
-  sdk: ^3.5.2
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
